add href to salmon

--- a/salmon.html
+++ b/salmon.html
@@ -1,4 +1,4 @@
-<head><meta charset="UTF-8"><style>table{border-collapse: collapse;border: 1px solid black;margin:10px;}td, th {border: 1px solid black;}</style></head><p>コジャケ: </p><table>
+<head><meta charset="UTF-8"><style>table{border-collapse: collapse;border: 1px solid black;margin:10px;}td, th {border: 1px solid black;}</style></head><a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ザコシャケ">コジャケ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="9" style="text-align:center; width:170px;">
@@ -106,7 +106,7 @@
   </tr>
  </tbody>
 </table>
-<p>シャケ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ザコシャケ">シャケ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="8" style="text-align:center; width:170px;">
@@ -203,7 +203,7 @@
   </tr>
  </tbody>
 </table>
-<p>シャケ（ラッシュ）: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ザコシャケ">シャケ（ラッシュ）</a>:<table>
  <tbody>
   <tr>
    <td rowspan="6" style="text-align:center; width:170px;">
@@ -281,7 +281,7 @@
   </tr>
  </tbody>
 </table>
-<p>ドスコイ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ザコシャケ">ドスコイ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="11" style="text-align:center; width:170px;">
@@ -408,7 +408,7 @@
   </tr>
  </tbody>
 </table>
-<p>タマヒロイ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ザコシャケ">タマヒロイ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="6" style="text-align:center; width:170px;">
@@ -482,7 +482,7 @@
   </tr>
  </tbody>
 </table>
-<p>バクダン: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/バクダン">バクダン</a>:<table>
  <tbody>
   <tr>
    <td rowspan="6" style="text-align:center; width:170px;">
@@ -572,7 +572,7 @@
   </tr>
  </tbody>
 </table>
-<p>ヘビ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ヘビ">ヘビ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="text-align:center; width:170px;">
@@ -633,7 +633,7 @@
   </tr>
  </tbody>
 </table>
-<p>テッパン: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/テッパン">テッパン</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="text-align:center; width:170px;">
@@ -704,7 +704,7 @@
   </tr>
  </tbody>
 </table>
-<p>タワー: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/タワー">タワー</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="text-align:center; width:170px;">
@@ -767,7 +767,7 @@
   </tr>
  </tbody>
 </table>
-<p>モグラ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/モグラ">モグラ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="text-align:center; width:170px;">
@@ -833,7 +833,7 @@
   </tr>
  </tbody>
 </table>
-<p>コウモリ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/コウモリ">コウモリ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="text-align:center; width:170px;">
@@ -900,7 +900,7 @@
   </tr>
  </tbody>
 </table>
-<p>カタパッド: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/カタパッド">カタパッド</a>:<table>
  <tbody>
   <tr>
    <td rowspan="8" style="text-align:center; width:170px;">
@@ -1009,7 +1009,7 @@
   </tr>
  </tbody>
 </table>
-<p>ハシラ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ハシラ">ハシラ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="text-align:center; width:170px;">
@@ -1071,7 +1071,7 @@
   </tr>
  </tbody>
 </table>
-<p>ダイバー: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ダイバー">ダイバー</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="width:170px;">
@@ -1134,7 +1134,7 @@
   </tr>
  </tbody>
 </table>
-<p>ナベブタ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ナベブタ">ナベブタ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="width:170px;">
@@ -1214,7 +1214,7 @@
   </tr>
  </tbody>
 </table>
-<p>テッキュウ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/テッキュウ">テッキュウ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="text-align:center; width:170px;">
@@ -1271,7 +1271,7 @@
   </tr>
  </tbody>
 </table>
-<p>キンシャケ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/キンシャケ">キンシャケ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="text-align:center; width:170px;">
@@ -1341,7 +1341,7 @@
   </tr>
  </tbody>
 </table>
-<p>グリル: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/グリル">グリル</a>:<table>
  <tbody>
   <tr>
    <td rowspan="6" style="text-align:center; width:170px;">
@@ -1414,7 +1414,7 @@
   </tr>
  </tbody>
 </table>
-<p>ドロシャケ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ドロシャケ">ドロシャケ</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="text-align:center; width:170px;">
@@ -1474,7 +1474,7 @@
   </tr>
  </tbody>
 </table>
-<p>シャケコプター: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ハコビヤたち">シャケコプター</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="text-align:center; width:170px;">
@@ -1536,7 +1536,7 @@
   </tr>
  </tbody>
 </table>
-<p>ハコビヤ母艦: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ハコビヤたち">ハコビヤ母艦</a>:<table>
  <tbody>
   <tr>
    <td rowspan="5" style="text-align:center; width:170px;">
@@ -1594,7 +1594,7 @@
   </tr>
  </tbody>
 </table>
-<p>ヨコヅナ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ヨコヅナ">ヨコヅナ</a>:<table>
  <tbody>
   <tr>
    <td colspan="4" style="text-align:center; background-color:lightgray;">
@@ -1682,7 +1682,7 @@
   </tr>
  </tbody>
 </table>
-<p>タツ: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/タツ">タツ</a>:<table>
  <tbody>
   <tr>
    <td colspan="4" style="text-align:center; background-color:lightgray;">
@@ -1797,7 +1797,7 @@
   </tr>
  </tbody>
 </table>
-<p>ジョー: </p><table>
+<a href="https://wikiwiki.jp/splatoon3mix/%E3%82%B5%E3%83%BC%E3%83%A2%E3%83%B3%E3%83%A9%E3%83%B3/%E3%82%B7%E3%83%A3%E3%82%B1%E3%81%AE%E7%A8%AE%E9%A1%9E/ジョー">ジョー</a>:<table>
  <tbody>
   <tr>
    <td colspan="4" style="text-align:center; background-color:lightgray;">
